--- a/edit.html
+++ b/edit.html
@@ -22,7 +22,20 @@
                     <label for="email">Email address</label>
                     <p class="value">yokoocami@gmail.com</p>
                     <label for="password">Password</label>
-                    <p class="value">***********</p>
+                    <p class="value">***********<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Create Password</title>
+    <link rel="stylesheet" href="./css/create_password.css">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,500;1,700&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+</head>
+<body></p>
                 </div>
                 <input type="submit" value="Edit" class="secondary-button edit-button">
             </form>
