Se termino el curso con las distintas plantillas del shoppify

--- a/detalle_product.html
+++ b/detalle_product.html
@@ -13,8 +13,20 @@
 </head>
 <body>
     <aside class="product_detail">
-        <img src="./assets/iconos/icon_close.png" alt="close" class="close">
+        <div class="prduct_detail-close">
+            <img src="./assets/iconos/icon_close.png" alt="close" class="close">
+        </div>
         <img src="https://images.pexels.com/photos/1367000/pexels-photo-1367000.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+        <div class="product-info">
+            <p>Q 750.00</p>
+            <p>Ps4 Controll</p>
+            <p>Control for PS4 console in vivid blue color, rechargeable and wireless, SONY brand</p>
+            <button class="primary-button add-to-cart-button">
+                <img src="./assets/iconos/bt_add_to_cart.svg" alt="add to cart">
+                Add to cart
+            </button>
+            <button class="test">Prueba</button>
+        </div>
     </aside>
 </body>
 </html>
